--- a/monitor/monitor/templates/web/index.html
+++ b/monitor/monitor/templates/web/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<title>System-Monitor</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link href="css/bootstrap.min.css" rel="stylesheet" />
-		<link href="css/bootstrap.css" rel="stylesheet" />
-		<link href="css/d3-bing.css" rel="stylesheet" />
-		<link href="css/style.css" rel="stylesheet" />
+		<link href="/static/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="/staticcss/bootstrap.css" rel="stylesheet" />
+		<link href="/static/css/d3-bing.css" rel="stylesheet" />
+		<link href="/static/css/style.css" rel="stylesheet" />
 	</head>
 	<body>
 		<div>
@@ -46,7 +46,7 @@
 						<li><a href="#">交换空间</a></li>
 						<li class="nav-divider"></li>
 						<li class="nav-header"><h4>网络</h4></a></li>
-						<li><a href="network/status.html">网络状态</a></li>
+						<li><a href="localhost:8000/netstat">网络状态</a></li>
 						<li><a href="#">上传</a></li>
 						<li class="nav-divider"></li>
 						<li class="nav-header"><h4>磁盘</h4></a></li>
@@ -59,8 +59,8 @@
 				</div>
 			</div>
 		</div>
-		<script src="jQuery/jquery-2.1.1.js"></script>
-		<script src="jQuery/jquery-2.1.1.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
+		<script src="/static/jQuery/jquery-2.1.1.js"></script>
+		<script src="/static/jQuery/jquery-2.1.1.min.js"></script>
+		<script src="/static/js/bootstrap.min.js"></script>
 	</body>
 </html>
