--- a/monitor/monitor/templates/web/network/status.html
+++ b/monitor/monitor/templates/web/network/status.html
@@ -3,10 +3,10 @@
 	<head>
 		<title>System-Monitor</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link href="../css/bootstrap.min.css" rel="stylesheet" />
-		<link href="../css/bootstrap.css" rel="stylesheet" />
-		<link href="../css/d3-bing.css" rel="stylesheet" />
-		<link href="../css/style.css" rel="stylesheet" />
+		<link href="/static/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="/static/css/bootstrap.css" rel="stylesheet" />
+		<link href="/static/css/d3-bing.css" rel="stylesheet" />
+		<link href="/static/css/style.css" rel="stylesheet" />
 	</head>
 	<body>
 		<div>
@@ -70,16 +70,21 @@
 				</div>
 			</div>
 		</div>
-		<script src="../jQuery/jquery-2.1.1.min.js"></script>
-		<script src="../js/bootstrap.min.js"></script>
+		<script src="/static/jQuery/jquery-2.1.1.min.js"></script>
+		<script src="/static/js/bootstrap.min.js"></script>
 		<script>
 		createTable();
 		function createTable() {
+            var accessToken = window.location.hash.substring(1);
 			$.ajax({
-				url: "localhost:8000/port/",
+				url: "http://127.0.0.1:8000/port/" + accessToken,
 				type: "GET",
-				dataType: "JSON",
+                async: false
+				dataType: "jsonp",
+                jsonp: "callback",
+                jsonpCallback:"callback",
 				success: function(data) {
+                    alert(data);
 					var objson = eval(data);
 					for ( var i = 0; i < objson.length; i ++ ) {
 						var row = document.createElement("tr");
