--- a/monitor/monitor/templates/web/index.html
+++ b/monitor/monitor/templates/web/index.html
@@ -4,7 +4,7 @@
 		<title>System-Monitor</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href="/static/css/bootstrap.min.css" rel="stylesheet" />
-		<link href="/staticcss/bootstrap.css" rel="stylesheet" />
+		<link href="/static/css/bootstrap.css" rel="stylesheet" />
 		<link href="/static/css/d3-bing.css" rel="stylesheet" />
 		<link href="/static/css/style.css" rel="stylesheet" />
 	</head>
@@ -46,7 +46,7 @@
 						<li><a href="#">交换空间</a></li>
 						<li class="nav-divider"></li>
 						<li class="nav-header"><h4>网络</h4></a></li>
-						<li><a href="localhost:8000/netstat">网络状态</a></li>
+						<li><a href="http://127.0.0.1:8000/network">网络状态</a></li>
 						<li><a href="#">上传</a></li>
 						<li class="nav-divider"></li>
 						<li class="nav-header"><h4>磁盘</h4></a></li>
