--- a/monitor/monitor/templates/web/cpu/cpu.html
+++ b/monitor/monitor/templates/web/cpu/cpu.html
@@ -46,7 +46,7 @@
 						<li><a href="#">交换空间</a></li>
 						<li class="nav-divider"></li>
 						<li class="nav-header"><h4>网络</h4></a></li>
-						<li><a href="../network/status.html">网络状态</a></li>
+						<li><a href="http://127.0.0.1:8000/network">网络状态</a></li>
 						<li><a href="#">上传</a></li>
 						<li class="nav-divider"></li>
 						<li class="nav-header"><h4>磁盘</h4></a></li>
@@ -167,11 +167,6 @@
 			    .attr("dy", 21)
 			    .attr("text-anchor", "middle") // text-align: right
 			    .text("%");
-
-
-			  ///////////////////////////////////////////////////////////
-			  // STREAKER CONNECTION ////////////////////////////////////
-			  ///////////////////////////////////////////////////////////
 
 			  var updateInterval = window.setInterval(update, 1000);
 
