--- a/monitor/monitor/templates/web/network/status.html
+++ b/monitor/monitor/templates/web/network/status.html
@@ -41,7 +41,7 @@
 					<ul class="nav nav-pills nav-stacked">
 						<li class="nav-divider"></li>
 						<li class"nav-header"><h4>空间</h4></li>
-						<li><a href="#">CPU占用率</a></li>
+						<li><a href="http://127.0.0.1:8000/cpu">CPU占用率</a></li>
 						<li><a href="#">内存占用率</a></li>
 						<li><a href="#">交换空间</a></li>
 						<li class="nav-divider"></li>
